# openhush

./: .gitignore  .pre-commit-config.yaml  AREAS_FOR_IMPROVEMENT.md  CHANGELOG.md  CLAUDE.md  COORDINATOR.md  Cargo.toml  Cross.toml  LICENSE  README.md  REQUIREMENTS.md  config.example.toml  deny.toml  package-lock.json  tarpaulin.toml
.claude/commands/: create-issue.md  generate-tests.md  meta-review.md  sanity-check.md
.claude/knowledge/: anti-patterns.md  architecture.md  error-codes.md  errors.md  interfaces.md  patterns.md  security.md  test-patterns.md  threat-model.md  workflow.md
.claude/metrics/: agent-log.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  requirement.yml
.github/workflows/: ci.yml  release.yml
contrib/: openhush.service
contrib/status-bar/: README.md  polybar-openhush.sh  waybar-openhush.sh
docs/: BOT_ARCHITECTURE_EVALUATION.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: audio_processing.rs  audio_validation.rs  config_parse.rs  ring_buffer.rs
packaging/: README.md
packaging/aur/: PKGBUILD  PKGBUILD-git
packaging/deb/debian/: changelog  control  copyright  rules
packaging/flatpak/: org.openhush.OpenHush.desktop  org.openhush.OpenHush.metainfo.xml  org.openhush.OpenHush.yml
packaging/homebrew/: openhush.cask.rb  openhush.rb
packaging/macos/: build-dmg.sh  entitlements.plist  sign-and-notarize.sh
packaging/windows/: build-msi.ps1  openhush.wxs
profiles/: README.md
profiles/apparmor/: openhush
profiles/firejail/: openhush.profile
profiles/selinux/: openhush.fc  openhush.te
src/: config.rs  context.rs  daemon.rs  download_queue.rs  lib.rs  main.rs  panic_handler.rs  recording.rs  secrets.rs
src/api/: auth.rs  handlers.rs  mod.rs  routes.rs  state.rs
src/correction/: mod.rs
src/dbus/: interface.rs  mod.rs  service.rs
src/diarization/: mod.rs
src/engine/: mod.rs  validation.rs  whisper.rs
src/gui/: channel_selector.rs  mod.rs  wizard.rs
src/input/: audio.rs  hotkey.rs  mod.rs  ring_buffer.rs  system_audio.rs  system_audio_macos.rs  system_audio_windows.rs  wake_word.rs
src/ipc/: mod.rs  named_pipe.rs  server.rs  types.rs  unix_socket.rs
src/output/: actions.rs  clipboard.rs  mod.rs  paste.rs
src/platform/: linux.rs  macos.rs  mod.rs  sandbox.rs  wayland_ipc.rs  windows.rs
src/queue/: mod.rs  worker.rs
src/service/: linux.rs  macos.rs  mod.rs  windows.rs
src/summarization/: mod.rs  ollama.rs  openai.rs  provider.rs  template.rs
src/translation/: m2m100.rs  mod.rs  ollama.rs  sentence_buffer.rs
src/tray/: icon.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/tui/: app.rs  daemon.rs  event.rs  mod.rs  theme.rs  ui.rs
src/tui/widgets/: audio_meter.rs  mod.rs
src/vad/: mod.rs  silero.rs
src/vocabulary/: mod.rs
tests/: cli_integration.rs
wiki/: API-Reference.md  Architecture.md  Components.md  Home.md  Market-Analysis.md  Platform-Support.md  Plugin-System.md  Product-Vision.md  User-Guide.md  _Sidebar.md
