[package]
name = "openhush"
version = "0.1.0"
edition = "2021"
authors = ["Christian Kamien <christian.kamien@gmail.com>"]
description = "Open-source voice-to-text that acts as a seamless whisper keyboard"
license = "MIT"
repository = "https://github.com/claymore666/openhush"
keywords = ["voice", "speech-to-text", "whisper", "transcription"]
categories = ["command-line-utilities", "accessibility"]

[features]
default = []
cuda = ["whisper-rs/cuda"]

[dependencies]
# Transcription
whisper-rs = "0.15"

# Audio capture
cpal = "0.15"

# Global hotkeys
rdev = "0.5"

# Clipboard
arboard = "3.4"

# Simulated typing (X11/macOS/Windows)
enigo = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Platform paths (XDG on Linux, native elsewhere)
directories = "5"
dirs = "5"

# Unix process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Notifications
notify-rust = "4"

# Audio feedback
rodio = "0.19"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux TTY input
evdev = "0.12"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Package metadata for cargo-deb
[package.metadata.deb]
maintainer = "Christian Kamien <christian.kamien@gmail.com>"
copyright = "2024 Christian Kamien"
license-file = ["LICENSE", "0"]
extended-description = """
OpenHush is an open-source voice-to-text tool that acts as a seamless whisper keyboard.
Press a hotkey, speak, release — your words appear where your cursor is.
Powered by local AI, no cloud required.
"""
section = "utils"
priority = "optional"
assets = [
    ["target/release/openhush", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/openhush/", "644"],
]

# Package metadata for cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/openhush", dest = "/usr/bin/openhush", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/openhush/README.md", mode = "644" },
]
